--- a/css/style.css
+++ b/css/style.css
@@ -270,8 +270,8 @@ section {
   display: none;
 }
 .banner .col-lg-6.col-md-9 {
-  margin-top: 300px;
-  margin-left: -70px;
+  margin-top: 230px;
+  margin-left: 330px;
 }
 .heading-h2 {
   font-family: "Roboto", sans-serif;
@@ -392,7 +392,7 @@ section {
 }
 
 .banner {
-  background: url(../images/hero_img.jpeg) no-repeat left center/100%;
+  background: url(../images/hero_img.jpg) no-repeat left center/100%;
   height: 100%;
   width: 100%;
   padding: 7% 0%;
@@ -508,8 +508,10 @@ section {
 }
 
 .banner p {
-  color: rgb(0, 0, 0);
+  color: #230aae;
   margin-bottom: 10px;
+  font-weight: bold;
+  font-size: 25px;
 }
 
 @media screen and (min-width: 480px) {
